# main-stack-template

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs  sql.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
