[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["multipart", "ws"] }
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["serde_derive"] }
sqlx = { version = "0.8.3", features = ["mysql"] }
tokio = { version = "1.43.1", features = ["full"] }
